Avoid using com.sun.tools.javac in tests (#597)
Co-authored-by: Sushant Dewan <sushant@wavefront.com>